# ai4experiments-flexible-manufactoring

./: .dockerignore  .gitignore  Dockerfile  config.json  nginx.conf  pyproject.toml  requirements.txt  start.sh  start_service.py
backend/: pyproject.toml  start.sh  start_service.py
backend/fm_demo_process/: fm_problem.py  fm_process_base.py  fm_process_fluents.py  fm_process_operators.py  fm_process_operators_annealing.py  fm_process_operators_hard_turning.py
backend/fm_unit_tests/: fm_tests_integration.py
fm_demo_process/: fm_problem.py  fm_process_base.py  fm_process_fluents.py  fm_process_operators_cutting.py  fm_process_operators_heat_treatment.py  fm_process_operators_lapping.py
fm_unit_tests/: fm_tests_integration.py
frontend/: angular.json  package-lock.json  package.json
frontend/src/: index.html  styles.css
frontend/src/app/: app.component.css  app.component.html  app.component.ts  app.module.ts  input.service.ts  planner.service.ts
frontend/src/app/input-info/: input-info.component.css  input-info.component.html  input-info.component.spec.ts  input-info.component.ts
frontend/src/app/output-plan/: output-plan.component.html  output-plan.component.spec.ts  output-plan.component.ts
frontend/src/app/planer/: planer.component.html  planer.component.spec.ts  planer.component.ts
