[tool.poetry]
name = "ai4experiments-flexible-manufacturing"
version = "0.1.0"
description = ""
authors = ["Jennifer <jennifer.renoux@oru.se>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
unified-planning = {version = "*", extras = ["tamer"]}
fastapi = "*"
uvicorn = {version = "*", extras=["standard"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
